# hallway-protobuffers

./: .gitignore  .gitlab-ci.yml  BUILD.bazel  README.md  WORKSPACE  avatar-message.proto  build.py  hallway_avatar_message.proto
cpp/: CMakeLists.txt  avatar_message.pb.h
cpp/include/: AvatarMessageUtils.h  hallway_avatar_message.pb.h
cpp/src/: AvatarMessageUtils.cpp  avatar_message.pb.cc  hallway_avatar_message.pb.cc
cs/: AvatarMessage.cs  HallwayAvatarMessage.cs
hallway/: BUILD.bazel
js/: .eslintignore  .eslintrc.js  package.json  rollup.config.js  tsconfig.json
js/src/: avatar-message.ts  hallway_avatar_message.ts  index.ts
