# https://rules-proto-grpc.com/en/latest/lang/cpp.html#cpp-proto-compile

package(default_visibility = ["//visibility:public"])
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_proto_library")
load("@rules_proto_grpc//csharp:defs.bzl", "csharp_proto_compile")

cpp_proto_library(
    name = "hallway_avatar_message_pb_cc",
    protos = [":hallway_avatar_message"]
)

csharp_proto_compile(
    name = "hallway_avatar_message_pb_cs",
    protos = [":hallway_avatar_message"]
)

proto_library(
    name = "hallway_avatar_message",
    srcs = ["hallway_avatar_message.proto"]
)